--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <header class="header">
       <h1 class="header__devfinder">devfinder</h1>
-      <a href="#" class="header__lghtDrkToggle">DARK<img src="starter-code/assets/icon-moon.svg" alt="sun-image" class="sunimg"/></a> 
+      <a href="#" id = "header_lghtDrkToggle" class="darkmode lightmode">DARK<img src="starter-code/assets/icon-moon.svg" alt="sun-image" class="sunimg"/></a> 
     </header>
     <!-- Search Bar -->
     <section class="srch">
