--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
       <a href="#" id = "header_lghtDrkToggle" class="darkmode lightmode">DARK<img src="starter-code/assets/icon-moon.svg" alt="sun-image" class="sunimg"/></a> 
     </header>
     <!-- Search Bar -->
-    <section class="srch">
+    <form id ="form" class = "srch">
       <img src="starter-code/assets/icon-search.svg" alt="#" class="search__img">
-      <input type="text" class="search__input" type="text" placeholder="Search Github username...">
+      <input type="text" class="search__input" type="text" placeholder="Search Github username..." name="q">
       <button class="btn">Search</button>
-    </section>
+    </form>
 
     <!-- Profile -->
 
